[package]
name = "reverse-proxy"
version = "0.1.0"
description = "An HTTP reverse proxy."
authors = ["Kobby Pentangeli <kobbypentangeli@gmail.com>"]
repository = "https://github.com/kobby-pentangeli/reverse-proxy"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
bytes = "1.11"
hyper = { version = "0.14", features = ["full"] }
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1.4", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
