[package]
name = "reverse-proxy"
version = "0.1.0"
description = "An HTTP reverse proxy."
authors = ["Kobby Pentangeli <kobbypentangeli@gmail.com>"]
repository = "https://github.com/kobby-pentangeli/reverse-proxy"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
bytes = "1.11"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-rustls = { version = "0.27", default-features = false, features = [
    "http1",
    "ring",
    "tls12",
    "logging",
] }
hyper-util = { version = "0.1", features = ["full"] }
regex = "1.12"
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "logging",
    "tls12",
] }
rustls-pemfile = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1.49", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = [
    "ring",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
webpki-roots = "1"

[dev-dependencies]
rcgen = "0.13"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
