[package]
name = "palisade"
version = "0.1.0"
description = "An HTTP reverse proxy built on hyper, tokio, and rustls"
authors = ["Kobby Pentangeli <kobbypentangeli@gmail.com>"]
repository = "https://github.com/kobby-pentangeli/palisade"
documentation = "https://docs.rs/palisade"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2024"
rust-version = "1.85"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["proxy", "palisade", "http", "load-balancer", "hyper"]

[dependencies]
bytes = "1.11"
clap = { version = "4", features = ["derive"] }
governor = "0.10"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-rustls = { version = "0.27", default-features = false, features = [
    "http1",
    "ring",
    "tls12",
    "logging",
] }
hyper-util = { version = "0.1", features = ["full"] }
regex = "1.12"
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "logging",
    "tls12",
] }
rustls-pki-types = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1.49", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = [
    "ring",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
webpki-roots = "1"

[dev-dependencies]
rcgen = "0.14"
# Pin time >= 0.3.47 to resolve RUSTSEC-2026-0009 (transitive via rcgen).
time = "0.3.47"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
